changed h1 and p text

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
+		<h1>New Headline Ready to Commit!</h1>
+		<p>Gonna collaborate SO HARD on this branch heck yeah!</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
